--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width">
-    <title>Tunity</title>
+    <title>Tunit</title>
     <link rel="stylesheet" href="/css/fuzz.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
