css not working

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <title>Tunit</title>
-    <link rel="stylesheet" href="/css/fuzz.css">
+    <link rel="stylesheet" href="css/fuzz.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
 </html>
