--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Tunit</title>
     <link rel="stylesheet" href="css/fuzz.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
 </html>
 <body> 
@@ -12,7 +12,7 @@
   <div class="container"> 
     <div class="two-column">
       <h1>Today's Recommendations </h1><a class="top-right" href="/profile">
-        <image class="circle" src="/images/placeholder.jpg"></image></a>
+        <image class="circle" src="images/placeholder.jpg"></image></a>
     </div>
     <ul class="cards">
       <li class="card">
@@ -20,55 +20,55 @@
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-0.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-0.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-1.jpg"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-1.jpg"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-2.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-2.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-3.jpg"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-3.jpg"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-4.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-4.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
     </ul>
   </div>
@@ -85,55 +85,55 @@
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-0.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-0.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-1.jpg"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-1.jpg"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-2.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-2.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-3.jpg"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-3.jpg"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-4.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-4.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
     </ul>
   </div>
@@ -160,55 +160,55 @@
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-0.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-0.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-1.jpg"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-1.jpg"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-2.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-2.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-3.jpg"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-3.jpg"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
       <li class="card">
         <div> 
           <h3 class="card-item">Song Name</h3>
           <h4 class="card-item-subtitle">Artist Name</h4>
           <div class="card-content"><a class="card-image" href="song-link">
-              <image class="squircle contain-img" src="/images/placeholder-covers/placeholder-4.png"></image></a></div>
+              <image class="squircle contain-img" src="images/placeholder-covers/placeholder-4.png"></image></a></div>
         </div>
         <div class="card-item-wrapper two-column"><a class="card-link" href="song-link">
-            <image class="card-icon" src="/images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
-            <image class="card-icon" src="/images/plus-light.png"></image></a></div>
+            <image class="card-icon" src="images/play-light.png"></image></a><a class="card-link button-actions" href="add-to-library-link"> 
+            <image class="card-icon" src="images/plus-light.png"></image></a></div>
       </li>
     </ul>
   </div>
