--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Tunit</title>
     <link rel="stylesheet" href="css/fuzz.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <!-- sign in with apple -->
+    <meta name="appleid-signin-client-id" content="[CLIENT_ID]">
+    <meta name="appleid-signin-scope" content="[SCOPES]">
+    <meta name="appleid-signin-redirect-uri" content="[REDIRECT_URI]">
+    <meta name="appleid-signin-state" content="[STATE]">
+    <meta name="appleid-signin-nonce" content="[NONCE]">
+    <meta name="appleid-signin-use-popup" content="true">
   </head>
 </html>
 <body> 
